More contrast and accessibiliy fixes

--- a/pillarpointstewards/static/main.css
+++ b/pillarpointstewards/static/main.css
@@ -1266,7 +1266,8 @@ footer li {
 	border: 1px solid transparent;
 }
 .month td.notcurrentmonth {
-	color: #B0B0B0;
+	color: rgba(0, 0, 0, 0.55);
+	font-style: italic;
 }
 .month td.shiftday {
 	padding: 0;
@@ -1479,6 +1480,18 @@ a.person-mini:active {
 .dropdown-block.dropdown-admin {
 	background-color: rgba(0, 0, 0, 0.3);
 }
+.dropdown-block a:link,
+.dropdown-block a:visited,
+.dropdown-block a:hover,
+.dropdown-block a:focus,
+.dropdown-block a:active {
+	color: rgba(0, 0, 0, 0.6);
+}
+.dropdown-block a:hover,
+.dropdown-block a:focus,
+.dropdown-block a:active {
+	color: rgba(0, 0, 0, 0.5);
+}
 
 
 .dropdown-block form {
@@ -1493,7 +1506,7 @@ a.person-mini:active {
 	font-style: normal;
 	text-decoration: none;
 	font-family: inherit;
-	background-color: rgba(0,0,0,0.2);
+	background-color: rgba(0,0,0,0.45);
 	color: white;
 	text-decoration: none;
 	font-weight: bold;
